[project]
name = "sensors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio==3.4.3",
    "bleak==0.22.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "dbus-fast==2.44.1",
    "idna==3.8",
    "requests==2.32.3",
    "smbus2==0.4.3",
    "urllib3==2.2.2",
]
